Workaround to fix body background rendering.

Fixes #1249.
Upstream issue is https://bugs.webkit.org/show_bug.cgi?id=266478